# PaperAssistant

./: README.md  dev-pa.ps1
backend-python/: README.md  pyproject.toml  requirements.txt  sidecar.spec
backend-python/app/: __init__.py  config.py  main.py
backend-python/app/api/: __init__.py  ai.py  citation.py  file_watcher.py  health.py  knowledge.py  literature.py  project.py  search_sources.py  selections.py  settings.py  stages_auto.py  temp_knowledge.py  typesetting.py
backend-python/app/audit/: __init__.py  fact_checker.py
backend-python/app/lib/: __init__.py  debug_assistant.py
backend-python/app/models/: __init__.py  knowledge_card.py  literature_card.py
backend-python/app/services/: __init__.py  ai_orchestrator.py  auto_summarize.py  file_watcher.py  memory_writer.py  mineru_client.py  pdf_splitter.py
backend-python/app/stages/: __init__.py  citation.py  literature_review.py  review.py  topic.py  typesetting.py  writing.py
backend-python/app/storage/: __init__.py  csv_io.py  markdown_io.py
docs/: ARCHITECTURE.md  PACKAGING.md  SPEC.md
frontend/: README.md  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/binaries/: README.md
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: README.md  icon.icns
frontend/src-tauri/resources/tectonic/: README.md
frontend/src-tauri/src/: main.rs
frontend/src/api/: client.ts
scripts/: build_all.ps1  build_sidecar.ps1  build_sidecar.sh  fetch_tectonic.ps1
(+27 files in other folders)
