[package]
name = "paperassistant"
version = "0.1.0"
description = "PaperAssistant desktop"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.19"

[features]
custom-protocol = ["tauri/custom-protocol"]
